Improve Meiro integration reliability
